--- a/templates/template1/base.html
+++ b/templates/template1/base.html
@@ -106,7 +106,7 @@
                             
                         </div>
                         <div class="navbar-nav mr-left py-0">
-                            <form action="" method="GET">
+                            <form action="{% url 'ecommerce:search' %}" method="GET">
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Search for products" name="q">
                                     <div class="input-group-append">
